--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			let Zahl = document.getElementById("idInput").value;
 			vOutput = "Jetzt kommt eine Wertetabelle...<br>";		
 			vOutput = vOutput + "<table border=1>";	
-			vOutput = vOutput + "<tr><th>Zahl<sup>3</sup></td><th>x<sup>2</sup></td><th>x<sup>2</sup></th></tr>";
+			vOutput = vOutput + "<tr><th>Zahl</sup></td><th>x<sup>2</sup></td><th>x<sup>3</sup></th></tr>";
 			
 			while (x <= Zahl) {
 			Quadrat3 = x*x*x;
